// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findExpressionOccurrences works with arrays 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 2,
      "start": 1,
    },
    "value": "5",
  },
  Expression {
    "position": Position {
      "end": 5,
      "start": 4,
    },
    "value": "5",
  },
]
`;

exports[`findExpressionOccurrences works with multiple occurrences 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 1,
      "start": 0,
    },
    "value": "5",
  },
  Expression {
    "position": Position {
      "end": 5,
      "start": 4,
    },
    "value": "5",
  },
]
`;

exports[`findExpressionOccurrences works with multiple occurrences of strings 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 5,
      "start": 0,
    },
    "value": "\\"abc\\"",
  },
  Expression {
    "position": Position {
      "end": 13,
      "start": 8,
    },
    "value": "\\"abc\\"",
  },
]
`;

exports[`findExpressionOccurrences works with multiple scopes 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 9,
      "start": 8,
    },
    "value": "3",
  },
  Expression {
    "position": Position {
      "end": 13,
      "start": 12,
    },
    "value": "3",
  },
]
`;

exports[`findExpressionOccurrences works with multiple scopes 2`] = `
Array [
  Expression {
    "position": Position {
      "end": 26,
      "start": 25,
    },
    "value": "3",
  },
]
`;

exports[`findExpressionOccurrences works with objects 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 13,
      "start": 12,
    },
    "value": "5",
  },
  Expression {
    "position": Position {
      "end": 19,
      "start": 18,
    },
    "value": "5",
  },
]
`;

exports[`findExpressionOccurrences works with single occurrence 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 1,
      "start": 0,
    },
    "value": "5",
  },
]
`;

exports[`findExpressionOccurrences works with values in arrays 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 2,
      "start": 1,
    },
    "value": "5",
  },
  Expression {
    "position": Position {
      "end": 5,
      "start": 4,
    },
    "value": "5",
  },
]
`;

exports[`findExpressionOccurrences works with values in objects 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 13,
      "start": 12,
    },
    "value": "5",
  },
  Expression {
    "position": Position {
      "end": 19,
      "start": 18,
    },
    "value": "5",
  },
]
`;
